[gd_scene load_steps=25 format=3 uid="uid://cjf50m7hxccmv"]

[ext_resource type="Texture2D" uid="uid://weo3arfvf848" path="res://sprites/Enemies/Chicken/Hit (32x34).png" id="1_4ueud"]
[ext_resource type="Script" path="res://scripts/chicken.gd" id="1_8yw7p"]
[ext_resource type="Texture2D" uid="uid://cgas38debk7rx" path="res://sprites/Enemies/Chicken/Run (32x34).png" id="2_uvxyc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2alau"]
atlas = ExtResource("1_4ueud")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvn1c"]
atlas = ExtResource("1_4ueud")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rrbh"]
atlas = ExtResource("1_4ueud")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wcv5"]
atlas = ExtResource("1_4ueud")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_tecxt"]
atlas = ExtResource("1_4ueud")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x8jh"]
atlas = ExtResource("2_uvxyc")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbeml"]
atlas = ExtResource("2_uvxyc")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_bty16"]
atlas = ExtResource("2_uvxyc")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1rs2"]
atlas = ExtResource("2_uvxyc")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsp3u"]
atlas = ExtResource("2_uvxyc")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f21x"]
atlas = ExtResource("2_uvxyc")
region = Rect2(160, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy880"]
atlas = ExtResource("2_uvxyc")
region = Rect2(192, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_w11fe"]
atlas = ExtResource("2_uvxyc")
region = Rect2(224, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf1w0"]
atlas = ExtResource("2_uvxyc")
region = Rect2(256, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_eykw5"]
atlas = ExtResource("2_uvxyc")
region = Rect2(288, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcppb"]
atlas = ExtResource("2_uvxyc")
region = Rect2(320, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_keb3q"]
atlas = ExtResource("2_uvxyc")
region = Rect2(352, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlgwd"]
atlas = ExtResource("2_uvxyc")
region = Rect2(384, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tcle"]
atlas = ExtResource("2_uvxyc")
region = Rect2(416, 0, 32, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_d6lsx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2alau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvn1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rrbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wcv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tecxt")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x8jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbeml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bty16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1rs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsp3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f21x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy880")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w11fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf1w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eykw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcppb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keb3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlgwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tcle")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1m2c"]
size = Vector2(21, 32)

[node name="Chicken" type="Area2D" groups=["enemy"]]
script = ExtResource("1_8yw7p")

[node name="BatSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d6lsx")
animation = &"hit"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="BatCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_s1m2c")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="BatSprite" to="." method="_on_bat_sprite_animation_finished"]
